GDBusMethodInvocation: Clarify how the ownership is handled

https://bugzilla.gnome.org/show_bug.cgi?id=767952